<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:orderInCategory="1"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_popular"
                android:title="@string/action_popular"
                android:orderInCategory="1"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_rated"
                android:title="@string/action_rated"
                android:orderInCategory="2"
                app:showAsAction="never"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_favorite"
        android:title="@string/action_favorite"
        android:orderInCategory="2"
        app:showAsAction="never"/>
</menu>